--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/login.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/login.fxml
@@ -36,6 +36,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -43,31 +46,33 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="954.0" prefWidth="1647.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="at.ac.fhcampuswien.xsolutions.LoginController">
+<VBox prefHeight="954.0" prefWidth="1647.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.xsolutions.LoginController">
    <children>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
+      <VBox fx:id="bg" alignment="CENTER" onMouseClicked="#unfocusFields" prefHeight="200.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
          <children>
             <HBox alignment="CENTER" prefHeight="205.0" prefWidth="1647.0">
                <children>
-                  <GridPane alignment="CENTER" prefHeight="326.0" prefWidth="259.0">
+                  <GridPane alignment="CENTER" prefHeight="233.0" prefWidth="257.0">
                      <columnConstraints>
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
                      </columnConstraints>
                      <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+                        <RowConstraints maxHeight="88.0" minHeight="10.0" prefHeight="68.0" vgrow="ALWAYS" />
+                        <RowConstraints maxHeight="97.0" minHeight="10.0" prefHeight="55.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="58.0" minHeight="10.0" prefHeight="52.0" vgrow="ALWAYS" />
+                        <RowConstraints maxHeight="58.0" minHeight="10.0" prefHeight="52.0" valignment="TOP" vgrow="NEVER" />
                      </rowConstraints>
                      <children>
-                        <PasswordField fx:id="usernameField" prefHeight="25.0" prefWidth="207.0" promptText="Benutzername" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                        <PasswordField fx:id="passwordField" prefHeight="25.0" prefWidth="208.0" promptText="Passwort" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                        <Label style="-fx-font-size: 18px; -fx-font-weight: 700;" text="Anmelden">
+                        <TextField fx:id="usernameField" focusTraversable="false" prefWidth="257.0" promptText="Benutzername" GridPane.rowIndex="1" />
+                        <PasswordField fx:id="passwordField" focusTraversable="false" prefHeight="25.0" prefWidth="208.0" promptText="Passwort" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                        <Label prefHeight="79.0" prefWidth="87.0" style="-fx-font-size: 18px; -fx-font-weight: 700;" text="Anmelden">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <Label fx:id="errorLabel" text="Falscher Benutzername oder Passwort!" textFill="#a82b2b" GridPane.rowIndex="3" />
+                        <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" text="Falscher Benutzername oder Passwort!" textFill="#a82b2b" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
+                        <Button alignment="CENTER" contentDisplay="RIGHT" maxHeight="28.0" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#userLogin" prefHeight="28.0" prefWidth="169.0" style="-fx-background-color: #000000; -fx-background-radius: 31px; -fx-font-size: 15px;" text="Anmelden" textFill="WHITE" GridPane.rowIndex="3" />
                      </children>
                   </GridPane>
                </children>
@@ -79,34 +84,33 @@
             <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" prefHeight="43.0" prefWidth="284.0" style="-fx-background-color: #000000; -fx-font-size: 18px;" text="Nicht angemeldet" textFill="WHITE">
+            <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" prefHeight="43.0" prefWidth="284.0" style="-fx-background-color: #000000; -fx-font-size: 18px;" text="Nicht angemeldet" textFill="WHITE" GridPane.halignment="LEFT">
                <font>
                   <Font size="18.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="70.0" />
+               </GridPane.margin>
             </Button>
-            <GridPane GridPane.columnIndex="3">
-               <columnConstraints>
-                  <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onMouseClicked="#exitButton" prefHeight="30.0" prefWidth="100.0" style="-fx-background-color: #a82b2b; -fx-background-radius: 31px; -fx-font-size: 18px;" text="Exit" textFill="WHITE" />
-                  <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#userLogin" prefHeight="30.0" prefWidth="281.0" style="-fx-background-color: #6666; -fx-background-radius: 31px; -fx-font-size: 18px;" text="Anmelden" textFill="WHITE" GridPane.columnIndex="1">
-                     <GridPane.margin>
-                        <Insets left="10.0" right="25.0" />
-                     </GridPane.margin>
-                  </Button>
-               </children>
-            </GridPane>
+            <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onMouseClicked="#exitButton" prefHeight="30.0" prefWidth="100.0" style="-fx-background-color: #a82b2b; -fx-background-radius: 31px; -fx-font-size: 18px;" text="Exit" textFill="WHITE" GridPane.columnIndex="3">
+               <GridPane.margin>
+                  <Insets right="40.0" />
+               </GridPane.margin>
+            </Button>
+            <ImageView fitHeight="55.0" fitWidth="55.0" GridPane.halignment="LEFT">
+               <image>
+                  <Image url="@../../../../../../../../../Downloads/%5BCITYPNG.COM%5DSettings%20White%20Outline%20Icon%20Download%20PNG%20-%201124x1124.png" />
+               </image>
+               <GridPane.margin>
+                  <Insets left="20.0" />
+               </GridPane.margin>
+            </ImageView>
          </children>
       </GridPane>
    </children>
